--- a/installation.tex
+++ b/installation.tex
@@ -1,4 +1,5 @@
 \chapter{Installation}
+\label{installation}
 
 You install \LaTeX{} on your computer by downloading a \introduce{distribution},
 which comes with:
