--- a/why.tex
+++ b/why.tex
@@ -138,8 +138,7 @@ with relatively little effort from you, the author.
 Modern versions can also take advantage of new\footnote{By new,
 I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
 software are only just starting to catch up.} advances in computer typography,
-such as OpenType fonts, giving you the same tools available to professional
-designers and publishers.
+giving you the same tools available to professional designers and publishers.
 
 \chapter{Another Guide?}
 
