--- a/structure.tex
+++ b/structure.tex
@@ -1,4 +1,5 @@
 \chapter{Document Structure}
+\label{structure}
 
 While every \LaTeX{} document is different,
 all share a few common elements.
@@ -50,7 +51,7 @@ package, which adds \verb|\LuaLaTeX| and \verb|\XeLaTeX| commands:
 \end{lstlisting}
 \end{leftfigure}
 \begin{samepage}
-should build a \textsc{pdf} that reads
+should get you a \textsc{pdf} that reads
 \begin{leftfigure}
 \lm \XeLaTeX{} and \LuaLaTeX{} are neat.
 \end{leftfigure}
@@ -58,17 +59,19 @@ should build a \textsc{pdf} that reads
 Like other commands, \verb|\usepackage| can take optional arguments.
 The \texttt{geometry} package, for instance,
 takes the desired paper size and margins.
-For \acronym{us} letter paper with one-inch side margins, you could type:
+For \acronym{us} letter paper with one-inch margins, you could type:
 \begin{leftfigure}
 \begin{lstlisting}
-\usepackage[letterpaper, left=1in, right=1in]{geometry}
+\usepackage[letterpaper,
+            left=1in, right=1in, top=1in, bottom=1in
+           ]{geometry}
 \end{lstlisting}
 \end{leftfigure}
 
 
-Many packages are installed as part of your \LaTeX{} distribution,
-and any you can't find there can be found on the Comprehensive \TeX{}
-Archive Network, or \acronym{ctan}.\punckern\footnote{Curious readers may
+Many packages are installed as part of your \LaTeX{} distribution.
+Any you can't find locally are on the Comprehensive \TeX{}
+Archive Network, or \acronym{ctan},\punckern\footnote{Curious readers may
 be wondering what \TeX{} is, and how it differs from \LaTeX.
 The short version is that \TeX{} is the typesetting system that \LaTeX{}
 is built on top of---the latter is a framework of commands for the former.
@@ -77,25 +80,66 @@ is built on top of---the latter is a framework of commands for the former.
 The long version is at the back of the book, under Appendix~\ref{history}.
 We won't discuss how to use plain \TeX{} here---that's for another book.
 The \TeX book.}
-The manuals for every single package can also be found on \acronym{ctan},
+at \url{https://ctan.org}.
+The manuals for every single package can also be found there,
 so it should be your first stop when learning how to use a new package.
 
 \section{Titles, sections, and tables of contents}
 
-TBD
+Authors often create hierarchy to help readers navigate their work.
+\LaTeX{} provides seven different commands to break apart your document:
+\verb|\part|, \verb|\chapter|, \verb|\section|, \verb|\subsection|,
+\verb|\subsubsection|, \verb|\paragraph|, and \verb|\subparagraph|.
+To use one, just issue the command in your document where you want that section
+to start.
+For example,
+\begin{leftfigure}
+\begin{lstlisting}
+\documentclass{book}
+
+\begin{document}
+\chapter{The Start}
+This is a very short chapter in a very short book.
+
+\chapter{The End}
+Is the book over yet?
+
+\section{No!}
+There's some more we must do before we go.
+
+\section{Yes!}
+Goodbye!
+\end{document}
+\end{lstlisting}
+\end{leftfigure}
+Note that some levels may not be available depending on the document class
+you've chosen. Parts and chapters, for example, only appear in books.
+And don't go too crazy with these commands.
+Most works only need a few levels of hierarchy.
+
+Levels are automatically numbered---for example,
+the title of this chapter was produced with \verb|\chapter{Document Structure}|,
+and \LaTeX{} automatically determined that it was chapter number \ref{structure}.
+You can also have \LaTeX{} automatically generate a table of contents for you
+by placing \verb|\tableofcontents| at the start of the document body.
 
 \section{What next?}
 
 As promised, this book isn't a comprehensive reference,
 but it \emph{will} point you to places where you can learn more.
-See Appendix~\ref{resources} for good, general \LaTeX{} resources,
-but we'll also wrap up each chapter with some ideas you could look into next.
+See Appendix~\ref{resources} for good, general \LaTeX{} resources.
+We'll also wrap up each chapter with some ideas you could look into next.
 
-Consider learning about:
+Consider learning how to:
 \begin{itemize}
-\item KOMA~Script, a set of document classes and packages
+\item Automatically start your document with its title, the author's name,
+    and the date using \verb|\maketitle|.
+\item Control section numbering with \verb|\setcounter{secnumdepth}|
+and ``starred'' section commands, e.g., \verb|\subsection*{foo}|.
+\item Create auto-updating cross-references with \verb|\label| and \verb|\ref|.
+\item Use KOMA~Script, a set of document classes and packages
 that make it easy to customize nearly every aspect of your document,
 from section heading fonts to footnotes.
-\item Including images using the \texttt{graphicsx} package.
-\item Adding hyperlinks to your \acronym{pdf} using the \texttt{hyperref} package.
+\item Include images using the \texttt{graphicsx} package.
+\item Add hyperlinks to your \acronym{pdf} using the \texttt{hyperref} package.
 \end{itemize}
