Stub out some chapters

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -322,6 +322,14 @@ his college papers.
 
 \input{structure}
 
+\input{textformatting}
+
+\input{punctuation}
+
+\input{pagelayout}
+
+\input{math}
+
 \appendix
 
 \input{history}
