--- a/latex-book.tex
+++ b/latex-book.tex
@@ -128,14 +128,18 @@
 \setfnsymbol{tweaked}
 \deffootnotemark{\thefootnotemark}
 
-\usepackage{tocbasic}
-
-% Use the tocstyle package to give all ToC items sans serif font.
-% Note: tocstyle is currently in alpha, so feel free to tweak this as needed.
-% At time of writing, it seems to be the simplest way to get the intended effect.
-\usepackage{tocstyle}
-\settocfeature{entryhook}{\addfontfeature{Numbers={Tabular,Uppercase}}}
-\settocfeature{entryvskip}{2pt}
+\DeclareTOCStyleEntry[%
+    beforeskip=10pt,
+    entrynumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
+    pagenumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
+    linefill = \TOCLineLeaderFill
+]{tocline}{chapter}
+\DeclareTOCStyleEntry[%
+    beforeskip=1pt,
+    entrynumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
+    pagenumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
+    indent=0.4in
+]{tocline}{section}
 
 % Don't use a sans font for description labels.
 \addtokomafont{descriptionlabel}{\rmfamily}
