--- a/back.tex
+++ b/back.tex
@@ -58,10 +58,10 @@ and in high-resolution print.
 Captions are set in
 \href{http://www.fontbureau.com/NHG/}{\textsf{\small Neue Haas Grotesk}},
 a Helvetica restoration by Christian Schwartz.
-Other digitizations of the classic Swiss typeface are based on versions made for
+Other digitizations of the classic Swiss typeface are based on fonts made for
 Linotype and phototypesetting machines,
-resulting in digital fonts with all the compromises and kludges from the past two
-generations of printing technology.
+resulting in digital versions with all the compromises and kludges of those
+past two generations of printing technology.
 Schwartz based his work on Helvetica's original drawings,
 resulting in a design faithful to the original cold metal type.
 
@@ -78,6 +78,7 @@ Douglas Thomas's recent history of the typeface,
 a typeface with support for dozens of languages and more than 2,000 characters,
 is used for some Greek in Appendix~\ref{history}.
 You have probably seen it as the wordmark for Wikipedia.
+% Use Noto instead?
 
 Finally,
 Latin Modern---the OpenType version of Knuth's Computer Modern---as well
