--- a/structure.tex
+++ b/structure.tex
@@ -20,7 +20,7 @@ is called the \introduce{preamble}.
 Here, we perform any setup we need---such as importing packages
 and defining commands---to control how the body of our document
 (between \verb|\begin{document}| and \verb|\end{document}|) looks.
-As mentioned briefly in Chapter~\ref{installation},
+As mentioned briefly in \chapref{installation},
 \introduce{packages} are bits of code that can modify your document
 in interesting ways.
 They can do all sorts of things, like:
