Styles, finish (ha) text formatting

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -120,7 +120,7 @@
     {\textsuperscript†}%
     {\textsuperscript‡}%
     {\textsuperscript{◊}}%
-    {\textsuperscript{¶}}%
+    {\textsuperscript{§}}%
     {**}%
     {\textsuperscript{††}}%
     {\textsuperscript{‡‡}}%
