Try out Noto for international type

--- a/back.tex
+++ b/back.tex
@@ -74,11 +74,10 @@ from advertising and political campaigns to the moon.
 Douglas Thomas's recent history of the typeface,
 \textit{Never Use Futura}, is a fantastic read.
 
-{\fontspec[Ligatures=TeX,Scale=MatchLowercase]{Linux Libertine O}Linux Libertine},
-a typeface with support for dozens of languages and more than 2,000 characters,
-is used for some Greek in Appendix~\ref{history}.
-You have probably seen it as the wordmark for Wikipedia.
-% Use Noto instead?
+{\fontspec[Ligatures=TeX,Scale=MatchLowercase]{NotoSerif-Regular}Noto},
+a project by Google to provide a typeface for \emph{every} language in the
+Unicode standard,
+is used for various bits of non-Latin text.
 
 Finally,
 Latin Modern---the OpenType version of Knuth's Computer Modern---as well
