--- a/history.tex
+++ b/history.tex
@@ -44,7 +44,7 @@ digital typesetting system.
 When the dust settled in 1978, Knuth had the first version of
 \TeX.\punckern\footnote{\TeX\ is pronounced like the first syllable of
 ``\textbf{tech}nician''\quotekern. It is short for the Greek
-{\fontspec[Scale=MatchLowercase]{Linux Libertine}τέχνη},
+{\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
 meaning \introduce{art} or \introduce{craft}.\endnote{Knuth,
 \textit{The \TeX book} (Addison-Wesley, 1986), 1.}}
 
