Stub out international type chapter

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -85,7 +85,6 @@
 
 \usepackage{polyglossia}
 \setdefaultlanguage[variant=american]{english}
-\setotherlanguage{vietnamese}
 
 \usepackage{microtype} % Font expansion, protrusion, and other goodness
 
@@ -351,6 +350,8 @@ his college papers.
 \input{math}
 
 \input{fonts}
+
+\input{international}
 
 \appendix
 
