--- a/international.tex
+++ b/international.tex
@@ -8,5 +8,5 @@
 \bigskip
 \fontspec[Ligatures=TeX]{NotoSerif-Devanagari}%
 नमस्ते
-\captionof{figure}{How many characters do you see?}
+\captionof{figure}{How many characters do you see? How many code points?}
 \end{centerfigure}
