--- a/why.tex
+++ b/why.tex
@@ -147,10 +147,10 @@ After all, it's been out for more than 30 years.
 A quick Amazon search finds nearly a dozen books on the topic.
 There are plenty of great resources online.
 
-Unfortunately, most of these guides have two fatal flaws: they are long,
+Unfortunately, most other guides have two fatal flaws: they are long,
 and they are old.
 The first is anathema to newcomers---if somebody asks about \LaTeX{},
-throwing a 200+ page book at them isn't an encouraging first step.
+throwing a 200+ page book at them isn't an encouraging start.
 The second matters because of how much the world of computer typesetting has
 changed.
 
@@ -165,8 +165,8 @@ This shows---badly---in most \LaTeX{} guides.
 If you look for instructions to change your document's font,
 you'll likely get swamped with bespoke nonsense.\punckern\footnote{%
 Take all criticisms of \LaTeX's past here with a grain of
-salt. After all, the fact that it has had such staying power that
-all of the technology around it became obsolete---multiple times---is astounding.}
+salt. After all, the fact that all of the technology around it became
+obsolete---multiple times---is a testament to its staying power.}
 
 The good news is that  \LaTeX{} has improved by leaps and bounds in recent years,
 and it's time for a guide that doesn't weigh you down with decades of legacy.
