--- a/back.tex
+++ b/back.tex
@@ -44,8 +44,8 @@ Available at \url{https://practicaltypography.com}
 \chapter{Colophon}
 
 This guide was typeset using \LuaLaTeX{} in Adobe Garamond Pro by
-Robert Slimbach.
-His historical revival is based on the Roman type of
+Robert Slimbach,
+His revival is based on the Roman type of
 the 16{\addfontfeature{VerticalPosition=Superior}th} century French
 punchcutter Claude Garamond.
 Italics are based on the work of his contemporary Robert Granjon.
@@ -67,17 +67,17 @@ resulting in a design faithful to the original cold metal type.
 
 {\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
 makes a guest appearance
-for typographical examples on page \pageref{typography}.
+for examples on page \pageref{typography}.
 Originally released in 1927 by Paul Renner,
 Futura has found itself almost everywhere,
 from advertising and political campaigns to the moon.
 Douglas Thomas's recent history of the typeface,
 \textit{Never Use Futura}, is a fantastic read.
 
+Various bits of non-Latin text are set in
 {\fontspec[Ligatures=TeX,Scale=MatchLowercase]{NotoSerif-Regular}Noto},
-a project by Google to provide a typeface for \emph{every} language in the
-Unicode standard,
-is used for various bits of non-Latin text.
+a type family by Google that covers \emph{every} language
+in the Unicode standard.
 
 Finally,
 Latin Modern---the OpenType version of Knuth's Computer Modern---as well
