--- a/latex-book.tex
+++ b/latex-book.tex
@@ -85,6 +85,7 @@
 
 \usepackage{polyglossia}
 \setdefaultlanguage[variant=american]{english}
+\setotherlanguage{french}
 
 \usepackage{microtype} % Font expansion, protrusion, and other goodness
 
