--- a/international.tex
+++ b/international.tex
@@ -1,12 +1,103 @@
 \chapter{Typographie Internationale}
 
+Surprisingly, many languages besides English exist,
+and we might want to write things with them.
+Digitising human language is a complicated topic that has evolved significantly
+since \LaTeX's inception.
+
+\section{Unicode}
+
+Today, computers usually represent text using Unicode. Briefly,
+\begin{itemize}
+\item A Unicode text file is made of a series of \introduce{code points},
+    each of which can represent a character to be drawn,
+    an accent or other diacritical mark to combine with an adjacent character,
+    or some non-printing character,
+    such as instruction to print subsequent text right-to-left.
+\item One or more of these code points combines to represent a
+    \introduce{grapheme cluster} or \introduce{glyph},
+    the shapes within a font that we informally call ``characters''\quotekern.
 \begin{centerfigure}
 \large%
 \fontspec[Ligatures=TeX]{NotoSerif}%
 Приве́т
-
-\bigskip
-\fontspec[Ligatures=TeX]{NotoSerif-Devanagari}%
+\quad\fontspec[Ligatures=TeX]{NotoSerif-Devanagari}%
 नमस्ते
-\captionof{figure}{How many characters do you see? How many code points?}
+\captionof{figure}{How many characters do you see?
+How many code points are they built from?}
 \end{centerfigure}
+\item Modern font formats such as TrueType and OpenType contain encoding tables
+    which map these code points to the glyphs the font file contains.
+\end{itemize}
+\LuaLaTeX{} and \XeLaTeX{} use these tools to render documents
+from Unicode input
+files.\punckern\footnote{LuaLaTeX accepts \mbox{\acronym{utf}-8} files,
+while \XeLaTeX is a bit more flexible and also
+accepts \mbox{\acronym{utf}-16} and
+\mbox{\acronym{utf}-32}.}
+Make sure that the fonts you select contain the needed glyphs---many
+only provide support for Latin languages.
+
+\section{The polyglossia package}
+
+If your document contains anything besides English,
+you should use the \texttt{polyglossia} package.
+It will automatically:
+\begin{itemize}
+\item Load language-specific hyphenation patterns and other typographical
+    conventions.
+\item Switch between fonts for each language, as specified by the user.
+\item Translate document labels,
+    like ``chapter''\quotekern, ``section''\quotekern, and so on.
+\item Format dates according to language-specific conventions.
+\item Format numbers in languages that have their own numbering system
+\item Use the \texttt{bidi} package for documents that languages written
+    right to left.
+\item Set the script and language tags of the current font, if applicable.
+\end{itemize}
+When using the package, specify the main language of your document,
+along with any other languages you use:
+\begin{leftfigure}
+\begin{lstlisting}
+\usepackage{polyglossia}
+\setdefaultlanguage[variant=american]{english}
+\setotherlanguage{french}
+\end{lstlisting}
+\end{leftfigure}
+\texttt{polyglossia} will define environments for the loaded languages
+which automatically apply that language's conventions to the text
+within.
+French, for example, places extra space around punctuation, so
+\begin{leftfigure}
+\begin{lstlisting}
+Dexter cried,
+\begin{french}
+«Omelette du fromage!»
+\end{french}
+\end{lstlisting}
+\end{leftfigure}
+gives:\footnote{Yes, it's \emph{omelette au fromage}.
+Direct all complaints to Cartoon Network.}
+\begin{leftfigure}
+Dexter cried,
+\begin{french}
+«Omelette du fromage!»
+\end{french}
+\end{leftfigure}
+
+% FFS: https://github.com/reutenauer/polyglossia/issues/68
+\directlua{polyglossia.desactivate_frpt()}
+
+\section{What next?}
+\begin{itemize}
+\item See the \texttt{polyglossia} manual for language-specific commands.
+\item Look into the \texttt{babel} package as an alternative to
+    \texttt{polyglossia}.\punckern\footnote{\texttt{polyglossia} has better
+    support for font features via \texttt{fontspec}.
+    However, if you run into issues with it,
+    %as I did in
+    %\LuaLaTeX{} (see \url{https://github.com/reutenauer/polyglossia/issues/68}),
+    \texttt{babel} is a fine substitute.}
+\item Try typesetting Japanese or Chinese with the \texttt{xeCJK} or
+    \monobox{luatex-ja} packages.
+\end{itemize}
